--- a/www/index.html
+++ b/www/index.html
@@ -174,7 +174,7 @@ T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
   
   <p>Unless otherwise indicated, each assignment is due on Thursday at 11:55pm of the week in which it is listed.</p>
 
-  <p>The schedule below and linked notes and assignments are from Spring 2017; they will be updated for Spring 2018.</p>
+  <p>The notes and assignments linked below are from Spring 2017; they will be updated for Spring 2018.</p>
   
 <table class="schedule">
 <thead>
@@ -188,45 +188,45 @@ T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
 <tbody>
 <tr>
   <td></td>
-  <td>01/17</td>
+  <td>01/16</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week01/week01.ipynb">Introduction and background</a></td>
   <td></td>
 </tr>
 <tr class="unit">
   <td rowspan="3">I</td>
-  <td>01/24</td>
+  <td>01/23</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb">Finite automata</a></td>
   <td><a href="../hw/hw1.pdf">HW1</a></td>
 </tr>
 <tr class="unit">
-  <td>01/31</td>
+  <td>01/30</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb">Regular expressions</a></td>
   <td><a href="../hw/hw2.pdf">HW2</a></td>
 </tr>
 <tr class="unit">
-  <td>02/07</td>
+  <td>02/06</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb">Non-regular languages</a></td>
   <td><a href="../hw/cp1.pdf">CP1</a></td>
 </tr>
 <tr>
   <td></td>
-  <td>02/14</td>
+  <td>02/13</td>
   <td><a href="../hw/me1-guide.pdf">Review and midterm</a></td>
   <td></td>
 </tr>
 <tr class="unit">
   <td rowspan="3">II</td>
-  <td>02/21</td>
+  <td>02/20</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">Context free grammars, pushdown automata</a></td>
   <td><a href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
-  <td>02/28</td>
+  <td>02/27</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb">CFG = PDA</a></td>
   <td><a href="../hw/hw4.pdf">HW4</a></td>
 </tr>
 <tr class="unit">
-  <td>03/07</td>
+  <td>03/06</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">Non-context-free languages</a></td>
   <td><a href="../hw/cp2.pdf">CP2</a></td>
 </tr>
@@ -236,39 +236,39 @@ T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
 </tr>
 <tr class="unit">
   <td rowspan="3">III</td>
-  <td>03/21</td>
+  <td>03/20</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">Turing machines</a></td> 
   <td><a href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
-  <td>03/28</td>
+  <td>03/27<br>Holy Week</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb">The universal TM and undecidability</a></td>
   <td><a href="../hw/hw6.pdf">HW6</a></td>
 </tr>
 <tr class="unit">
-  <td>04/04</td>
+  <td>04/03</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">Reducibility</a> and <a href="../hw/me2-guide.pdf">review</a></td>
   <td><a href="../hw/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
   <td></td>
-  <td>04/11<br>Holy Week</td>
-  <td>Midterm (Tuesday) and wrap-up (Thursday)</td>
+  <td>04/10</td>
+  <td>Review and midterm</td>
   <td></td>
 </tr>
 <tr class="unit">
   <td rowspan="3">IV</td>
-  <td>04/18</td>
+  <td>04/17</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb">P and NP</a></td>
   <td><a href="../hw/hw7.pdf">HW7</a></td>
 </tr>
 <tr class="unit">
-  <td>04/25</td>
+  <td>04/24</td>
   <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">NP-completeness</a></td>
   <td><a href="../hw/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
-  <td>05/02</td>
+  <td>05/01</td>
   <td><a href="../hw/fe-guide.pdf">Review</a></td> 
   <td><a href="../hw/hw8.pdf">HW8</a></td> 
 </tr>
