updates for spring 2018

--- a/www/index.html
+++ b/www/index.html
@@ -50,23 +50,23 @@
 <dt>
 <dt>Term</dt><dd>Spring 2018</dd>
 <dt>Time</dt><dd>TTh 2&ndash;3:15pm</dd>
-<dt>Location</dt><dd>TBD</dd>
+<dt>Location</dt><dd>136 DeBartolo</dd>
 <dt>Instructor</dt> <dd><a href="http://www.nd.edu/~dchiang">Dr. David Chiang</a></dd>
 </dl>
 
 <dl class="info"><dt>Prerequisites</dt> <dd><i>Discrete Mathematics</i> (CSE 20110) or equivalent. You especially need to be comfortable with sets, tuples, functions, relations, and graphs; and writing proofs by contradiction and by induction.</dd></dl>
 
 <dl class="info">
-<dt>Required text</dt> <dd>Michael Sipser's <em>Introduction to the Theory of Computation</em>, in either the 2nd or 3rd edition:
+<dt>Required text</dt> <dd>Michael Sipser's <em>Introduction to the Theory of Computation</em>, 3rd edition:
 
 <table class="invisible books">
 
-<tr><td><img src="images/sipser2.jpg"></td>
+<!-- <tr><td><img src="images/sipser2.jpg"></td>
 <td>2nd Edition, 2005<br>
 ISBN: 0-534-95097-3<br>
 Links: 
 <a href="http://www.amazon.com/Introduction-Theory-Computation-Advanced-Topics/dp/0534950973">Amazon</a>
-<a href="http://math.mit.edu/~sipser/itoc-errs2.1.html">errata</a></td></tr>
+<a href="http://math.mit.edu/~sipser/itoc-errs2.1.html">errata</a></td></tr> -->
 
 <tr><td><img src="images/sipser3.jpg"></td>
 <td>
@@ -75,12 +75,11 @@ ISBN: 1-133-18779-X<br>
 Links:
 <a href="http://www.amazon.com/Introduction-Theory-Computation-Michael-Sipser/dp/113318779X">Amazon</a>
 <a href="http://www-math.mit.edu/~sipser/itoc-errs3.1.html">errata</a><br>
-On reserve in the Engineering Library.
 </td></tr>
 
 <tr><td><img src="images/sipser3i.jpg"></td>
 <td>
-3rd International Edition, 2012<br>
+3rd International Edition, 2012 (recommended)<br>
 ISBN: 1-133-18781-1<br>
 Links:
 <a href="http://www.amazon.com/Introduction-Theory-Computation-3rd-International/dp/B00RI4T3BS">Amazon</a>
@@ -112,7 +111,7 @@ Links:
 </div>
 </div>
 
-<!-- <a name="staff"></a>
+<a name="staff"></a>
 <h1>Staff</h1>
 
 <div class="row">
@@ -120,12 +119,49 @@ Links:
 <div class="three columns staff">
 <img class="photo" src="images/chiang.png"><br>
 Instructor<br>
-<a href="http://www.nd.edu/~dchiang">David Chiang</a> (Notre Dame)<br>
-dchiang@nd.edu<br>
-T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
+<a href="http://www.nd.edu/~dchiang">David Chiang</a><br>
+dchiang@nd.edu
 </div>
 
-</div>  -->
+<div class="three columns staff">
+<img class="photo" src="images/turing.png"><br>
+Graduate TA<br>
+TBD
+</div>
+
+</div>
+
+<div class="row">
+
+<div class="three columns staff">
+<img class="photo" src="images/connor.png"><br>
+Undergraduate TA<br>
+Connor Higgins<br>
+chiggin7@nd.edu
+</div>
+
+<div class="three columns staff">
+<img class="photo" src="images/laura.png"><br>
+Undergraduate TA<br>
+Laura Syers<br>
+lsyers@nd.edu
+</div>
+
+<div class="three columns staff">
+<img class="photo" src="images/ryan.png"><br>
+Undergraduate TA<br>
+<a href="https://www3.nd.edu/~rmackey1/">Ryan Mackey</a><br>
+rmackey1@nd.edu
+</div>
+
+<div class="three columns staff">
+<img class="photo" src="images/john.png"><br>
+Instructor<br>
+<a href="https://johnwesthoff.com">John Westhoff</a><br>
+jwesthof@nd.edu
+</div>
+
+</div>
 
 <a name="requirements"></a>
 <h1>Requirements</h1>
@@ -170,7 +206,7 @@ T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
 
 <div class="row" style="overflow-x: auto;">
 <div class="twelve columns">
-  <p>Notes are posted as Jupyter notebooks. If you want to fiddle with the examples, install <a href="https://github.com/ND-CSE-30151/tock">Tock</a>, clone the <a href="https://github.com/ND-CSE-30151/spring-2017">Git repository</a>, and run <code>jupyter notebook</code> in your working copy.</p>
+  <p>Notes are posted as Jupyter notebooks. If you want to fiddle with the examples, install <a href="https://github.com/ND-CSE-30151/tock">Tock</a>, clone the <a href="https://github.com/ND-CSE-30151/spring-2018">Git repository</a>, and run <code>jupyter notebook</code> in your working copy.</p>
   
   <p>Unless otherwise indicated, each assignment is due on Thursday at 11:55pm of the week in which it is listed.</p>
 
@@ -294,18 +330,11 @@ T 3:30&ndash;5pm and Th 11:30&ndash;1, 326D Cushing
 
     <p>In Project 2, you'll write a parser for regular expressions and combine it with  NFAs to build a regular expression matcher. Your implementation will be asymptotically <em>much</em> faster than an implementation would be that uses Perl or Python's built-in regular expressions.</p>
 
-    <p>In Project 3, you'll extend the regular expression matcher to a tool that can define transformations from an input string to an output string. Tools of this sort have been used extensively in computational linguistics.</p>
   </div>
   <div class="six columns">
-  
-    <p>Finally, in Project 4, your regular expressions will metamorphose into a full-fledged programming language. As a taste, here's a program that factorizes a number written in unary notation:
 
-<pre><code>(:#)111*(:#)111*((:#)111*)*;
-{x*(#1:x#)1*)*};
-((x:1)*#)*
-</code></pre>
-Beautiful, right? Here are some ground rules.
-
+    <p>Projects 3 and 4 are being redesigned for Spring 2018.</p>
+    
 <ul><li>You can work in teams of up to three. Each team member should contribute a roughly equal amount of work.</li>
 <li>You can write in C++ (including all standard libraries except <code>&lt;regex></code>) or Python (including all standard libraries except <code>re</code>). Python is recommended. You can also write in another language with permission from the instructor.</li>
 </ul>
@@ -325,28 +354,46 @@ Beautiful, right? Here are some ground rules.
 <p>In the case of a serious illness or other excused absence, as defined by university policies, coursework submissions will be accepted late by the same number of days as the excused absence.</p>
 <p>Otherwise, you may submit some problems on time for full credit, and other problems late with a penalty of 10% per day (rounded down to the nearest point). No problem can be submitted more than once.</p>
 
-<h4>Honor Code</h4>
-<p>All work that you submit must be your own; that is, it must represent your own understanding, in your own words. Discussion of problems is encouraged, but writing solutions together or looking at other students' solutions is not allowed. Any print or online resources that you use must be cited properly; use of solution manuals is not allowed.</p>
-
-<h4>Copyright</h4>
-<p>All course materials written by the instructor and published on this website are licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>, which prohibits reuse for commercial purposes.</p>
-<p>All course materials written by the instructor and distributed privately (including through Sakai) should not be redistributed in any way; doing so is a violation of both US copyright law and the University of Notre Dame Honor Code.</p>
-</p>
+<h4>Students with Disabilities</h4>
+<p>Any student who has a documented disability and is registered with Disability Services should speak with the professor as soon as possible regarding accommodations. Students who are not registered should contact the <a href="http://disabilityservices.nd.edu/">Office of Disability Services</a>.</p>
 
 </div>
 
 <div class="six columns">
 
-<h4>Students with Disabilities</h4>
-<p>Any student who has a documented disability and is registered with Disability Services should speak with the professor as soon as possible regarding accommodations. Students who are not registered should contact the <a href="http://disabilityservices.nd.edu/">Office of Disability Services</a>.</p>
+<h4>Honor Code</h4>
+<div>
+<p>Students in this course are expected to abide by the Academic Code of Honor Pledge: “As a member of the Notre Dame community, I will not participate in or tolerate academic dishonesty.”</p>
 
-<h4>Classroom Recording</h4>
+<p>The following table summarizes how you may work with other students and use print/online sources:
+<table class="honorcode">
+<tbody><tr>
+<td></td>
+<th>Resources</th>
+<th>Solutions</th>
+</tr>
 
-<p>This semester we will be using an automated classroom recording system. This system allows us to record and distribute lectures to you in a secure environment. You can watch these recordings on your computer, tablet, or smartphone.  The recordings can be accessed within Sakai. Look for the tool labeled "Echo360 ALP" on the left hand side of the course.</p>
+<tr>
+<th>Consulting</th>
+<td id="consult-resource-cell" bgcolor="#93c47d">allowed</td>
+<td id="consult-solution-cell" bgcolor="#e06666">not allowed</td>
+</tr>
 
-<p>Because we will be recording in the classroom, your questions and comments may be recorded. (Video recordings typically only capture the front of the classroom.) If you have any concerns about your voice or image being recorded, please speak to me to determine an alternative means of participating. No content will be shared with individuals outside of your course without your permission, except for faculty and staff that need access for support.</p>
+<tr>
+<th>Copying</th>
+<td id="copy-resource-cell" bgcolor="ffd966">cite</td>
+<td id="copy-solution-cell" bgcolor="#e06666">not allowed</td>
+</tr>
+</tbody></table>
+See the <a href="https://cse.nd.edu/undergraduates/honor-code">CSE Guide to the Honor Code</a> for definitions of the above terms.</p>
 
-<p>These recordings are jointly copyrighted by the University of Notre Dame and your instructor. Posting them to other websites (including YouTube, Facebook, SnapChat, etc.) or elsewhere without express, written permission may result in disciplinary action and possible civil prosecution.<p>
+<p>If an instructor sees behavior that is, in his judgement, academically dishonest, he is required to file either an Honor Code Violation Report or a formal report to the College of Engineering Honesty Committee.</p>
+</div>
+
+<h4>Copyright</h4>
+<p>All course materials written by the instructor and published on this website are licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>, which prohibits reuse for commercial purposes.</p>
+<p>All course materials written by the instructor and distributed privately (including through Sakai) should not be redistributed in any way; doing so is a violation of both US copyright law and the University of Notre Dame Honor Code.</p>
+</p>
 
 </div>
 </div>
