--- a/www/index.html
+++ b/www/index.html
@@ -401,7 +401,7 @@ See the <a href="https://cse.nd.edu/undergraduates/honor-code">CSE Guide to the 
 </div>
 </div>
 
-<script type="text/javascript" src="retina.js"></script>
+<script type="text/javascript" src="js/retina.js"></script>
 
 </body>
 </html>
