grad ta and project

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
 <div class="menuparent">
 <div class="menu">
 <ul><li><a href="#overview">Overview</a></li> 
-    <!-- <li><a href="#staff">Staff</a></li> -->
+    <li><a href="#staff">Staff</a></li>
     <li><a href="#requirements">Requirements</a></li> 
     <li><a href="#schedule">Schedule</a></li> 
     <li><a href="#project">Project</a></li> 
@@ -124,9 +124,10 @@ dchiang@nd.edu
 </div>
 
 <div class="three columns staff">
-<img class="photo" src="images/turing.png"><br>
+<img class="photo" src="images/sikdar.png"><br>
 Graduate TA<br>
-TBD
+Satyaki Sikdar<br>
+ssikdar@nd.edu
 </div>
 
 </div>
@@ -328,12 +329,14 @@ jwesthof@nd.edu
 
     <p>In Project 1, you'll implement nondeterministic finite automata (NFA). Nondeterminism (essentially, unbounded parallelism) is one of the core concepts in the course, and implementing it will demonstrate how to simulate nondeterminism on deterministic hardware.</p>
 
-    <p>In Project 2, you'll write a parser for regular expressions and combine it with  NFAs to build a regular expression matcher. Your implementation will be asymptotically <em>much</em> faster than an implementation would be that uses Perl or Python's built-in regular expressions.</p>
+    <p>In Project 2, you'll write a parser for regular expressions and combine it with NFAs to build a regular expression matcher like grep. Your implementation will be asymptotically <em>much</em> faster than an implementation would be that uses Perl or Python's built-in regular expressions.</p>
 
   </div>
   <div class="six columns">
 
-    <p>Projects 3 and 4 are being redesigned for Spring 2018.</p>
+    <p>In Project 3, you'll use your regular expression engine to implement a fragment of sed. You'll also show how, in principle, any computer program could be compiled into this fragment of sed.</p>
+
+    <p>In Project 4, you'll extend your regular expression matcher to handle backreferences. Although this has a large speed penalty, you'll show how this extended matcher can be used to solve the Boolean satisfiability problem.</p>
     
 <ul><li>You can work in teams of up to three. Each team member should contribute a roughly equal amount of work.</li>
 <li>You can write in C++ (including all standard libraries except <code>&lt;regex></code>) or Python (including all standard libraries except <code>re</code>). Python is recommended. You can also write in another language with permission from the instructor.</li>
