--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,9 @@ Links:
 <img class="photo" src="images/chiang.png"><br>
 Instructor<br>
 <a href="http://www.nd.edu/~dchiang">David Chiang</a><br>
-dchiang@nd.edu
+dchiang@nd.edu<br>
+326D Cushing<br>
+MTh 3:30&ndash;5
 </div>
 
 <div class="three columns staff">
