--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,9 @@
     <li><a href="#requirements">Requirements</a></li> 
     <li><a href="#schedule">Schedule</a></li> 
     <li><a href="#project">Project</a></li> 
-    <li><a href="#policies">Policies</a></li></div>
+    <li><a href="#policies">Policies</a></li>
+    <li><a href="#misc">Miscellany</a></li>
+</div>
 
 <div class="container">
 
@@ -400,11 +402,36 @@ See the <a href="https://cse.nd.edu/undergraduates/honor-code">CSE Guide to the 
 <p>All course materials written by the instructor and distributed privately (including through Sakai) should not be redistributed in any way; doing so is a violation of both US copyright law and the University of Notre Dame Honor Code.</p>
 </p>
 
-</div>
-</div>
+</div> <!-- column -->
+</div> <!-- row -->
 
-</div>
-</div>
+<a name="misc"></a>
+<h1>Miscellany</h1>
+
+<div class="row">
+  <div class="six columns">
+    <h4>Further Reading</h4>
+    <p>These books are purely optional reading.</p>
+    <table class="invisible books">
+      <tr><td><img src="https://images-na.ssl-images-amazon.com/images/I/41h7ZBPdyjL._SX329_BO1,204,203,200_.jpg"></td> <td><i>The Golden Ticket</i> by Lance Fortnow. Popular account of P and NP and the history and future of the question.</td></tr>
+      <tr><td><img src="https://images-na.ssl-images-amazon.com/images/I/51du7ChkDML._SX332_BO1,204,203,200_.jpg"></td> <td><i>The Annotated Turing</i> by Charles Petzold. Contains the text of Turing's 1936 paper with detailed and understandable commentary.</td></tr>
+      <tr><td><img src="https://images-na.ssl-images-amazon.com/images/I/51eho8qelpL._SX309_BO1,204,203,200_.jpg"></td> <td><i>The Universal Computer: The Road from Leibniz to Turing</i> by Martin Davis. Short biographies of the pioneers of computability theory and their contributions.</td></tr>
+      <tr><td><img src="https://images-na.ssl-images-amazon.com/images/I/51ExA-wU3BL._SX357_BO1,204,203,200_.jpg"></td> <td><i>Logicomix: An Epic Search for Truth</i> by Christos Papadimitriou. Graphic novel about Bertrand Russell and his goal of establishing a logical foundation for mathematics. Only tangentially related to this course, but did I mention it's a graphic novel?</td></tr>
+    </table>
+  </div> <!-- column -->
+  <div class="six columns">
+    <h4>Links</h4>
+    <ul>
+      <li><a href="https://github.com/shinh/elvm">EsoLang Virtual Machine</a>: includes a C compiler with a Turing machine backend</li>
+      <li><a href="http://beza1e1.tuxen.de/articles/accidentally_turing_complete.html">Accidentally Turing-Complete</a></li>
+      <li>More later; please email suggestions</li>
+    </ul>
+  </div>
+</div> <!-- row -->
+
+
+</div> <!-- container -->
+</div> <!-- menuparent -->
 
 <script type="text/javascript" src="js/retina.js"></script>
 
