--- a/www/index.html
+++ b/www/index.html
@@ -124,14 +124,16 @@ Instructor<br>
 <a href="http://www.nd.edu/~dchiang">David Chiang</a><br>
 dchiang@nd.edu<br>
 326D Cushing<br>
-MTh 3:30&ndash;5
+MTh 3:30&ndash;5pm
 </div>
 
 <div class="three columns staff">
 <img class="photo" src="images/sikdar.png"><br>
 Graduate TA<br>
 Satyaki Sikdar<br>
-ssikdar@nd.edu
+ssikdar@nd.edu<br>
+Wed 4&ndash;6pm<br>
+B011 DeBartolo
 </div>
 
 </div>
@@ -163,7 +165,9 @@ rmackey1@nd.edu
 <img class="photo" src="images/john.png"><br>
 Instructor<br>
 <a href="https://johnwesthoff.com">John Westhoff</a><br>
-jwesthof@nd.edu
+jwesthof@nd.edu<br>
+Wed 6:30&ndash;8:30pm<br>
+B011 DeBartolo
 </div>
 
 </div>
