--- a/www/index.html
+++ b/www/index.html
@@ -217,6 +217,8 @@ B011 DeBartolo
 <div class="twelve columns">
   <p>Notes are posted as Jupyter notebooks. If you want to fiddle with the examples, install <a href="https://github.com/ND-CSE-30151/tock">Tock</a>, clone the <a href="https://github.com/ND-CSE-30151/spring-2018">Git repository</a>, and run <code>jupyter notebook</code> in your working copy.</p>
   
+  <p>[SP17] links point to notes from last year's offering in Spring 2017.</p>
+
   <p>Unless otherwise indicated, each assignment is due on Thursday at 11:55pm of the week in which it is listed.</p>
 
   <p>The notes and assignments linked below are from Spring 2017; they will be updated for Spring 2018.</p>
@@ -234,45 +236,45 @@ B011 DeBartolo
 <tr>
   <td></td>
   <td>01/16</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week01/week01.ipynb">Introduction and background</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2018/blob/master/notes/week01/week01.ipynb">Introduction and background</a></td>
   <td></td>
 </tr>
 <tr class="unit">
   <td rowspan="3">I</td>
   <td>01/23</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb">Finite automata</a></td>
+  <td>Finite automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw1.pdf">HW1</a></td>
 </tr>
 <tr class="unit">
   <td>01/30</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb">Regular expressions</a></td>
+  <td>Regular expressions <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw2.pdf">HW2</a></td>
 </tr>
 <tr class="unit">
   <td>02/06</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb">Non-regular languages</a></td>
+  <td>Non-regular languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/cp1.pdf">CP1</a></td>
 </tr>
 <tr>
   <td></td>
   <td>02/13</td>
-  <td><a href="../hw/me1-guide.pdf">Review and midterm</a></td>
+  <td>Review and midterm</td>
   <td></td>
 </tr>
 <tr class="unit">
   <td rowspan="3">II</td>
   <td>02/20</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">Context free grammars, pushdown automata</a></td>
+  <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
   <td>02/27</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb">CFG = PDA</a></td>
+  <td>CFG = PDA <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw4.pdf">HW4</a></td>
 </tr>
 <tr class="unit">
   <td>03/06</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">Non-context-free languages</a></td>
+  <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/cp2.pdf">CP2</a></td>
 </tr>
 </tr>
@@ -282,17 +284,17 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">III</td>
   <td>03/20</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">Turing machines</a></td> 
+  <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb" class="old">[SP17]</a></td> 
   <td><a href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
   <td>03/27<br>Holy Week</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb">The universal TM and undecidability</a></td>
+  <td>The universal TM and undecidability <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw6.pdf">HW6</a></td>
 </tr>
 <tr class="unit">
   <td>04/03</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">Reducibility</a> and <a href="../hw/me2-guide.pdf">review</a></td>
+  <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
@@ -304,22 +306,22 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">IV</td>
   <td>04/17</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb">P and NP</a></td>
+  <td>P and NP <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/hw7.pdf">HW7</a></td>
 </tr>
 <tr class="unit">
   <td>04/24</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">NP-completeness</a></td>
+  <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb" class="old">[SP17]</a></td>
   <td><a href="../hw/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
   <td>05/01</td>
-  <td><a href="../hw/fe-guide.pdf">Review</a></td> 
+  <td>Review</td> 
   <td><a href="../hw/hw8.pdf">HW8</a></td> 
 </tr>
 <tr>
   <td></td>
-  <td>TBD</td><td>Final exam</td>
+  <td>05/08<br>10:30</td><td>Final exam</td>
   <td></td>
 </tr>
 </tbody>
