--- a/www/index.html
+++ b/www/index.html
@@ -236,7 +236,7 @@ B011 DeBartolo
 <tr>
   <td></td>
   <td>01/16</td>
-  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2018/blob/master/notes/week01/week01.ipynb">Introduction and background</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2018/blob/master/notes/week01/week01.ipynb">Introduction and background</a> <a href="../notes/week01/Introduction.pdf">[slides]</a></td>
   <td></td>
 </tr>
 <tr class="unit">
