--- a/www/index.html
+++ b/www/index.html
@@ -108,6 +108,7 @@ Links:
 <li><a href="https://piazza.com/nd/spring2018/cse30151">Piazza</a> for questions and answers</li>
 <li><a href="https://nd-cse.slack.com/messages/cse-30151-sp18/">Slack</a> for informal discussion</li>
 <li>Notes and assignments will be linked from here, but you can also clone the <a href="https://github.com/ND-CSE-30151/spring-2018">Github repository</a></li>
+<li><a href="tikz_tutorial.pdf">Tutorial on using LaTeX and TikZ</a></li>
 </ul>
 
 </div>
@@ -123,8 +124,7 @@ Links:
 Instructor<br>
 <a href="http://www.nd.edu/~dchiang">David Chiang</a><br>
 dchiang@nd.edu<br>
-326D Cushing<br>
-MTh 3:30&ndash;5pm
+MTh 3:30&ndash;5pm<br>
 </div>
 
 <div class="three columns staff">
@@ -165,9 +165,7 @@ rmackey1@nd.edu
 <img class="photo" src="images/john.png"><br>
 Instructor<br>
 <a href="https://johnwesthoff.com">John Westhoff</a><br>
-jwesthof@nd.edu<br>
-Wed 6:30&ndash;8:30pm<br>
-B011 DeBartolo
+jwesthof@nd.edu
 </div>
 
 </div>
@@ -221,8 +219,6 @@ B011 DeBartolo
 
   <p>Unless otherwise indicated, each assignment is due on Thursday at 10pm of the week in which it is listed.</p>
 
-  <p>The notes and assignments linked below are from Spring 2017; they will be updated for Spring 2018.</p>
-  
 <table class="schedule">
 <thead>
 <tr>
@@ -242,17 +238,17 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">I</td>
   <td>01/23</td>
-  <td>Finite automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb" class="old">[SP17]</a></td>
+  <td>Finite automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw1.pdf">HW1</a></td>
 </tr>
 <tr class="unit">
   <td>01/30</td>
-  <td>Regular expressions <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb" class="old">[SP17]</a></td>
+  <td>Regular expressions <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw2.pdf">HW2</a></td>
 </tr>
 <tr class="unit">
   <td>02/06</td>
-  <td>Non-regular languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb" class="old">[SP17]</a></td>
+  <td>Non-regular languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb">[SP17]</a></td>
   <td><a href="../hw/cp1.pdf">CP1</a></td>
 </tr>
 <tr>
@@ -264,17 +260,17 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">II</td>
   <td>02/20</td>
-  <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb" class="old">[SP17]</a></td>
+  <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
   <td>02/27</td>
-  <td>CFG = PDA <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb" class="old">[SP17]</a></td>
+  <td>CFG = PDA <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw4.pdf">HW4</a></td>
 </tr>
 <tr class="unit">
   <td>03/06</td>
-  <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb" class="old">[SP17]</a></td>
+  <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">[SP17]</a></td>
   <td><a href="../hw/cp2.pdf">CP2</a></td>
 </tr>
 </tr>
@@ -284,17 +280,17 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">III</td>
   <td>03/20</td>
-  <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb" class="old">[SP17]</a></td> 
+  <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">[SP17]</a></td> 
   <td><a href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
   <td>03/27<br>Holy Week</td>
-  <td>The universal TM and undecidability <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb" class="old">[SP17]</a></td>
+  <td>The universal TM and undecidability <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw6.pdf">HW6</a></td>
 </tr>
 <tr class="unit">
   <td>04/03</td>
-  <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb" class="old">[SP17]</a></td>
+  <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">[SP17]</a></td>
   <td><a href="../hw/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
@@ -306,12 +302,12 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">IV</td>
   <td>04/17</td>
-  <td>P and NP <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb" class="old">[SP17]</a></td>
+  <td>P and NP <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb">[SP17]</a></td>
   <td><a href="../hw/hw7.pdf">HW7</a></td>
 </tr>
 <tr class="unit">
   <td>04/24</td>
-  <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb" class="old">[SP17]</a></td>
+  <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">[SP17]</a></td>
   <td><a href="../hw/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
