--- a/www/index.html
+++ b/www/index.html
@@ -244,12 +244,12 @@ jwesthof@nd.edu
 <tr class="unit">
   <td>01/30</td>
   <td>Regular expressions <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb">[SP17]</a></td>
-  <td><a href="../hw/hw2.pdf">HW2</a></td>
+  <td><xa href="../hw/hw2.pdf">HW2</a></td>
 </tr>
 <tr class="unit">
   <td>02/06</td>
   <td>Non-regular languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb">[SP17]</a></td>
-  <td><a href="../hw/cp1.pdf">CP1</a></td>
+  <td><xa href="../hw/cp1.pdf">CP1</a></td>
 </tr>
 <tr>
   <td></td>
@@ -261,17 +261,17 @@ jwesthof@nd.edu
   <td rowspan="3">II</td>
   <td>02/20</td>
   <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">[SP17]</a></td>
-  <td><a href="../hw/hw3.pdf">HW3</a></td>
+  <td><xa href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
   <td>02/27</td>
   <td>CFG = PDA <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb">[SP17]</a></td>
-  <td><a href="../hw/hw4.pdf">HW4</a></td>
+  <td><xa href="../hw/hw4.pdf">HW4</a></td>
 </tr>
 <tr class="unit">
   <td>03/06</td>
   <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">[SP17]</a></td>
-  <td><a href="../hw/cp2.pdf">CP2</a></td>
+  <td><xa href="../hw/cp2.pdf">CP2</a></td>
 </tr>
 </tr>
 <tr>
@@ -281,17 +281,17 @@ jwesthof@nd.edu
   <td rowspan="3">III</td>
   <td>03/20</td>
   <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">[SP17]</a></td> 
-  <td><a href="../hw/hw5.pdf">HW5</a></td>
+  <td><xa href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
   <td>03/27<br>Holy Week</td>
   <td>The universal TM and undecidability <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb">[SP17]</a></td>
-  <td><a href="../hw/hw6.pdf">HW6</a></td>
+  <td><xa href="../hw/hw6.pdf">HW6</a></td>
 </tr>
 <tr class="unit">
   <td>04/03</td>
   <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">[SP17]</a></td>
-  <td><a href="../hw/cp3.pdf">CP3</a></td>
+  <td><xa href="../hw/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
   <td></td>
@@ -303,17 +303,17 @@ jwesthof@nd.edu
   <td rowspan="3">IV</td>
   <td>04/17</td>
   <td>P and NP <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb">[SP17]</a></td>
-  <td><a href="../hw/hw7.pdf">HW7</a></td>
+  <td><xa href="../hw/hw7.pdf">HW7</a></td>
 </tr>
 <tr class="unit">
   <td>04/24</td>
   <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">[SP17]</a></td>
-  <td><a href="../hw/cp4.pdf">CP4</a></td> 
+  <td><xa href="../hw/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
   <td>05/01</td>
   <td>Review</td> 
-  <td><a href="../hw/hw8.pdf">HW8</a></td> 
+  <td><xa href="../hw/hw8.pdf">HW8</a></td> 
 </tr>
 <tr>
   <td></td>
