--- a/www/index.html
+++ b/www/index.html
@@ -144,28 +144,34 @@ B011 DeBartolo
 <img class="photo" src="images/connor.png"><br>
 Undergraduate TA<br>
 Connor Higgins<br>
-chiggin7@nd.edu
+chiggin7@nd.edu<br>
+Wed 8&ndash;10pm<br>
+B011 DeBartolo
 </div>
 
 <div class="three columns staff">
 <img class="photo" src="images/laura.png"><br>
 Undergraduate TA<br>
 Laura Syers<br>
-lsyers@nd.edu
+lsyers@nd.edu<br>
+Tues 8&ndash;10pm
 </div>
 
 <div class="three columns staff">
 <img class="photo" src="images/ryan.png"><br>
 Undergraduate TA<br>
 <a href="https://www3.nd.edu/~rmackey1/">Ryan Mackey</a><br>
-rmackey1@nd.edu
+rmackey1@nd.edu<br>
+Mon 8&ndash;10pm
 </div>
 
 <div class="three columns staff">
 <img class="photo" src="images/john.png"><br>
 Instructor<br>
 <a href="https://johnwesthoff.com">John Westhoff</a><br>
-jwesthof@nd.edu
+jwesthof@nd.edu<br>
+Thurs 8&ndash;10pm<br>
+B011 DeBartolo
 </div>
 
 </div>
