--- a/www/index.html
+++ b/www/index.html
@@ -125,6 +125,7 @@ Instructor<br>
 <a href="http://www.nd.edu/~dchiang">David Chiang</a><br>
 dchiang@nd.edu<br>
 MTh 3:30&ndash;5pm<br>
+326D Cushing
 </div>
 
 <div class="three columns staff">
@@ -154,7 +155,8 @@ B011 DeBartolo
 Undergraduate TA<br>
 Laura Syers<br>
 lsyers@nd.edu<br>
-Tues 8&ndash;10pm
+Tues 8&ndash;10pm<br>
+212 Cushing
 </div>
 
 <div class="three columns staff">
@@ -162,7 +164,8 @@ Tues 8&ndash;10pm
 Undergraduate TA<br>
 <a href="https://www3.nd.edu/~rmackey1/">Ryan Mackey</a><br>
 rmackey1@nd.edu<br>
-Mon 8&ndash;10pm
+Mon 8&ndash;10pm<br>
+212 Cushing
 </div>
 
 <div class="three columns staff">
