--- a/www/index.html
+++ b/www/index.html
@@ -247,7 +247,7 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">I</td>
   <td>01/23</td>
-  <td>Finite automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week02/week02.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week02/week02.ipynb">Finite automata</a></td>
   <td><a href="../hw/hw1.pdf">HW1</a></td>
 </tr>
 <tr class="unit">
