--- a/www/index.html
+++ b/www/index.html
@@ -258,7 +258,7 @@ B011 DeBartolo
 <tr class="unit">
   <td>02/06</td>
   <td>Non-regular languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week04/week04.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/cp1.pdf">CP1</a></td>
+  <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp1.pdf">CP1</a></td>
 </tr>
 <tr>
   <td></td>
