--- a/www/index.html
+++ b/www/index.html
@@ -252,7 +252,7 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>01/30</td>
-  <td>Regular expressions <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week03/week03.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week03/week03.ipynb">Regular expressions</a></td>
   <td><a href="../hw/hw2.pdf">HW2</a></td>
 </tr>
 <tr class="unit">
