--- a/www/index.html
+++ b/www/index.html
@@ -263,7 +263,7 @@ B011 DeBartolo
 <tr>
   <td></td>
   <td>02/13</td>
-  <td>Review and midterm</td>
+  <td><a href="../handouts/me1-guide.pdf">Review</a> and midterm</td>
   <td></td>
 </tr>
 <tr class="unit">
