solutions to sipser 1.28

--- a/www/index.html
+++ b/www/index.html
@@ -270,7 +270,7 @@ B011 DeBartolo
   <td rowspan="3">II</td>
   <td>02/20</td>
   <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/hw3.pdf">HW3</a></td>
+  <td><a href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
   <td>02/27</td>
