--- a/www/index.html
+++ b/www/index.html
@@ -269,7 +269,7 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">II</td>
   <td>02/20</td>
-  <td>Context free grammars, pushdown automata <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week05/week05.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week05/week05.ipynb">Context free grammars, pushdown automata </a></td>
   <td><a href="../hw/hw3.pdf">HW3</a></td>
 </tr>
 <tr class="unit">
