--- a/www/index.html
+++ b/www/index.html
@@ -280,7 +280,7 @@ B011 DeBartolo
 <tr class="unit">
   <td>03/06</td>
   <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/cp2.pdf">CP2</a></td>
+  <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp2.pdf">CP2</a></td>
 </tr>
 </tr>
 <tr>
@@ -300,7 +300,7 @@ B011 DeBartolo
 <tr class="unit">
   <td>04/03</td>
   <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/cp3.pdf">CP3</a></td>
+  <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
   <td></td>
@@ -317,7 +317,7 @@ B011 DeBartolo
 <tr class="unit">
   <td>04/24</td>
   <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/cp4.pdf">CP4</a></td> 
+  <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
   <td>05/01</td>
