--- a/www/index.html
+++ b/www/index.html
@@ -274,7 +274,7 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>02/27</td>
-  <td>CFG = PDA <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week06/week06.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week06/week06.ipynb">CFG = PDA</a></td>
   <td><a href="../hw/hw4.pdf">HW4</a></td>
 </tr>
 <tr class="unit">
