SS office hours, week 7 link

--- a/www/index.html
+++ b/www/index.html
@@ -134,7 +134,7 @@ Graduate TA<br>
 Satyaki Sikdar<br>
 ssikdar@nd.edu<br>
 Wed 4&ndash;6pm<br>
-B011 DeBartolo
+213 Cushing
 </div>
 
 </div>
@@ -279,7 +279,7 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>03/06</td>
-  <td>Non-context-free languages <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week07/week07.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2018/blob/master/notes/week07/week07.ipynb">Non-context-free languages</a></td>
   <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp2.pdf">CP2</a></td>
 </tr>
 </tr>
