--- a/www/index.html
+++ b/www/index.html
@@ -134,7 +134,8 @@ Graduate TA<br>
 Satyaki Sikdar<br>
 ssikdar@nd.edu<br>
 Wed 4&ndash;6pm<br>
-213 Cushing
+Before 3/21: B011 DeBartolo<br>
+Starting 3/21: 213 Cushing
 </div>
 
 </div>
