--- a/www/index.html
+++ b/www/index.html
@@ -291,7 +291,7 @@ B011 DeBartolo
   <td rowspan="3">III</td>
   <td>03/20</td>
   <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">[SP17]</a></td> 
-  <td><xa href="../hw/hw5.pdf">HW5</a></td>
+  <td><a href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
   <td>03/27<br>Holy Week</td>
