--- a/www/index.html
+++ b/www/index.html
@@ -290,7 +290,7 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">III</td>
   <td>03/20</td>
-  <td>Turing machines <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week08/week08.ipynb">[SP17]</a></td> 
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week08/week08.ipynb">Turing machines</a></td> 
   <td><a href="../hw/hw5.pdf">HW5</a></td>
 </tr>
 <tr class="unit">
