--- a/www/index.html
+++ b/www/index.html
@@ -296,7 +296,7 @@ B011 DeBartolo
 <tr class="unit">
   <td>03/27<br>Holy Week</td>
   <td>The universal TM and undecidability <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week09/week09.ipynb">[SP17]</a></td>
-  <td><xa href="../hw/hw6.pdf">HW6</a></td>
+  <td><a href="../hw/hw6.pdf">HW6</a></td>
 </tr>
 <tr class="unit">
   <td>04/03</td>
