satyaki office hours

--- a/www/index.html
+++ b/www/index.html
@@ -134,8 +134,7 @@ Graduate TA<br>
 Satyaki Sikdar<br>
 ssikdar@nd.edu<br>
 Wed 4&ndash;6pm<br>
-Before 3/21: B011 DeBartolo<br>
-Starting 3/21: 213 Cushing
+B011 DeBartolo
 </div>
 
 </div>
