--- a/www/index.html
+++ b/www/index.html
@@ -299,7 +299,7 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>04/03</td>
-  <td>Reducibility <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week10/week10.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week10/week10.ipynb">Reducibility </a></td>
   <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp3.pdf">CP3</a></td>
 </tr>
 <tr>
