--- a/www/index.html
+++ b/www/index.html
@@ -305,7 +305,7 @@ B011 DeBartolo
 <tr>
   <td></td>
   <td>04/10</td>
-  <td>Review and midterm</td>
+  <td><a href="../handouts/me2-guide.pdf">Review</a> and midterm</td>
   <td></td>
 </tr>
 <tr class="unit">
