--- a/www/index.html
+++ b/www/index.html
@@ -311,7 +311,7 @@ B011 DeBartolo
 <tr class="unit">
   <td rowspan="3">IV</td>
   <td>04/17</td>
-  <td>P and NP <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week11/week11.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week11/week11.ipynb">P and NP </a></td>
   <td><a href="../hw/hw7.pdf">HW7</a></td>
 </tr>
 <tr class="unit">
