--- a/www/index.html
+++ b/www/index.html
@@ -316,13 +316,13 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>04/24</td>
-  <td>NP-completeness <a href="http://nbviewer.ipython.org/github/ND-CSE-30151/Spring-2017/blob/master/notes/week12/week12.ipynb">[SP17]</a></td>
+  <td><a href="http://nbviewer.ipython.org/github/ND-CSE-30151/spring-2018/blob/master/notes/week12/week12.ipynb">NP-completeness</a></td>
   <td><a href="http://nbviewer.jupyter.org/github/ND-CSE-30151-SP18/theory-project-skeleton/blob/master/doc/cp4.pdf">CP4</a></td> 
 </tr>
 <tr class="unit">
   <td>05/01</td>
   <td>Review</td> 
-  <td><xa href="../hw/hw8.pdf">HW8</a></td> 
+  <td><a href="../hw/hw8.pdf">HW8</a></td> 
 </tr>
 <tr>
   <td></td>
