--- a/www/index.html
+++ b/www/index.html
@@ -321,7 +321,7 @@ B011 DeBartolo
 </tr>
 <tr class="unit">
   <td>05/01</td>
-  <td>Review</td> 
+  <td><a href="../handouts/fe-guide.pdf">Review</a></td> 
   <td><a href="../hw/hw8.pdf">HW8</a></td> 
 </tr>
 <tr>
